toProvision/dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  routes:
    - match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      kind: Rule
      middlewares:
      - name: traefik-dashboard-basicauth
        namespace: traefik
      services:
      - name: api@internal
        kind: TraefikService
