toProvision/mysite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-nginx
  labels:
    app: mysite-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite-nginx
  template:
    metadata:
      labels:
        app: mysite-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /usr/share/nginx/html #nginx specific
      volumes:
        - name: nginx-config
          configMap:
            name: index-html-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-nginx-service
spec:
  selector:
    app: mysite-nginx
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mysite-nginx-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Path('/')
      kind: Rule
      services:
        - name: mysite-nginx-ingress
          port: 80
